# django-boilerplate

./: README.md  pyproject.toml
backend/backend/: settings.py
