[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = ["Clément Coutet <clement.coutet@grenoble-inp.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
